Add babel to the project
Primarily for ES6 import/exports. Unfortunately node still doesn't
support this module syntax and I find it a much more intuative method
for importing modules.

--- a/package.json
+++ b/package.json
@@ -18,6 +18,10 @@
   },
   "homepage": "https://github.com/azaharakis/flower-shop#readme",
   "dependencies": {
-    "eslint": "^4.4.1"
+    "babel-register": "^6.24.1",
+    "eslint": "^4.4.1",
+  },
+  "devDependencies": {
+    "babel-preset-env": "^1.6.0"
   }
 }
