--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "start": "node --require babel-register src/index.js",
     "test": "npm run lint && npm run flow && npm run unit",
     "flow": "flow ./src",
-    "unit": "mocha --require babel-register ./src/**/*-spec.js",
+    "unit": "find ./src/ -name '*-spec.js' | xargs mocha --require babel-register -R spec",
     "lint": "eslint ./src --fix"
   },
   "repository": {
